# pattern-singleton

cpp/: .gitignore  CMakeLists.txt
cpp/src/: Singelton_Meyers.hpp  Singleton_Meyers.cpp
java/src/main/java/: Main.java  Trader.java
kotlin/src/main/kotlin/: Main.kt
res/: rates.json
src/: Singelton_Meyers.hpp  Singleton_Meyers.cpp  main.cpp
